increased the font size of the product count inside the search-result page

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -232,7 +232,7 @@ nav button {
 
 .result-count {
   font-family: $normal-font;
-  font-size: 10px;
+  font-size: 100%;
   color: $text-color;
   padding: 15px;
   border-bottom: 1px solid $text-color;
