--- a/styles/style.css
+++ b/styles/style.css
@@ -33,7 +33,7 @@ nav {
   color: #888;
   font-family: "helvetica-neue", Arial, Helvetica, sans-serif;
   max-width: 100%;
-  font-size: 10px;
+  font-size: small;
   z-index: 1;
 }
 
@@ -60,9 +60,9 @@ footer {
 }
 
 .nav-logo {
-  width: 80px;
+  width: 120px;
   position: absolute;
-  top: 12px;
+  top: 8px;
   left: 5px;
 }
 .nav-logo img {
@@ -437,6 +437,16 @@ nav button {
 @media (min-width: 769px) {
   nav {
     font-size: 16px;
+  }
+
+  .nav-logo {
+    top: 2px;
+  }
+  .nav-logo img {
+    height: 4vw;
+    width: auto;
+    max-width: none;
+    max-height: 35px;
   }
 
   .search-container {
