adjusted the spacing

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -484,6 +484,10 @@ nav button {
   }
   }
 
+  .navbar {
+    margin: 0px 28vw 0 21vw;
+  }
+
   .search-container {
     justify-content: center;
     padding-top: 95px;
