added colord backgrounds to the prices in the search-results

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -363,6 +363,15 @@ nav button {
   color: $website-color;
 }
 
+.product-price-result {
+  color: #fff;
+  a {
+    background-color: $website-color;
+    border-radius: 5px;
+    padding: 0px 20px;
+  }
+}
+
 .website-description {
   margin: 20px 0;
   flex-direction: column;
