fixed js errors

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -76,7 +76,7 @@ footer {
 }
 
 .nav-logo {
-  width: 120px;
+  width: 18vw;
   position: absolute;
   top: 8px;
   left: 5px;
@@ -289,6 +289,8 @@ nav button {
   padding: 15px;
   background-color: #fff;
   border-radius: 10px;
+  flex-direction: column;
+  justify-content: space-between;
 
   img {
     max-width: 100%;
@@ -365,10 +367,11 @@ nav button {
 
 .product-price-result {
   color: #fff;
+
   a {
     background-color: $website-color;
     border-radius: 5px;
-    padding: 0px 20px;
+    padding: 0 20px;
   }
 }
 
@@ -485,16 +488,17 @@ nav button {
 
   .nav-logo {
     top: 2px;
+
     img {
       height: 4vw;
       width: auto;
       max-width: none;
       max-height: 35px;
-  }
+    }
   }
 
   .navbar {
-    margin: 0px 28vw 0 21vw;
+    margin: 0 28vw 0 21vw;
   }
 
   .search-container {
@@ -588,7 +592,7 @@ nav button {
 
   .product-price-section {
     font-size: 30px;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 100%;
 
     button {
